// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Requests /> should render correctly 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
  value={
    Object {
      "roles": Array [],
    }
  }
>
  <MemoryRouter
    initialEntries={
      Array [
        "/requests",
      ]
    }
  >
    <IntlProvider
      defaultFormats={Object {}}
      defaultLocale="en"
      formats={Object {}}
      locale="en"
      messages={Object {}}
      onError={[Function]}
      textComponent={Symbol(react.fragment)}
    >
      <Requests
        isLoading={false}
        requests={Array []}
      />
    </IntlProvider>
  </MemoryRouter>
</Provider>
`;

exports[`<Requests /> should render correctly in loading state 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
  value={
    Object {
      "roles": Array [],
    }
  }
>
  <MemoryRouter
    initialEntries={
      Array [
        "/requests",
      ]
    }
  >
    <IntlProvider
      defaultFormats={Object {}}
      defaultLocale="en"
      formats={Object {}}
      locale="en"
      messages={Object {}}
      onError={[Function]}
      textComponent={Symbol(react.fragment)}
    >
      <Requests
        isLoading={true}
        requests={Array []}
      />
    </IntlProvider>
  </MemoryRouter>
</Provider>
`;
